--- a/configs/inference_rap.yaml
+++ b/configs/inference_rap.yaml
@@ -23,16 +23,16 @@ fs: 16000
 multithreaded: false
 
 #! joint gammatone model for RAP
-joint_pred_path: ${paths.root_dir}/logs/prediction_joint/runs/${time_stamp}/predictions_joint_gammatone.pt
-rap_pred_path: ${paths.output_dir}/prediction_rap_joint_gammatone.csv
+# joint_pred_path: ${paths.root_dir}/logs/prediction_joint/runs/${time_stamp}/predictions_joint_gammatone.pt
+# rap_pred_path: ${paths.output_dir}/prediction_rap_joint_gammatone.csv
 
 #! joint melspectrogram model for RAP
 # joint_pred_path: ${paths.root_dir}/logs/prediction_joint/runs/${time_stamp}/predictions_joint_mel.pt
 # rap_pred_path: ${paths.output_dir}/prediction_rap_joint_mel.csv
 
 #! joint mfcc model for RAP
-# joint_pred_path: ${paths.root_dir}/logs/prediction_joint/runs/${time_stamp}/predictions_joint_mfcc.pt
-# rap_pred_path: ${paths.output_dir}/prediction_rap_joint_mfcc.csv
+joint_pred_path: ${paths.root_dir}/logs/prediction_joint/runs/${time_stamp}/predictions_joint_mfcc.pt
+rap_pred_path: ${paths.output_dir}/prediction_rap_joint_mfcc.csv
 
 # ! mfcc model for RAP
 # TiTd_pred_path: ${paths.root_dir}/logs/prediction_rir/runs/${time_stamp}/predictions_rir_mfcc.pt
