modified:   configs/trainer/ddp.yaml 	modified:   configs/trainer/gpu.yaml

--- a/configs/trainer/gpu.yaml
+++ b/configs/trainer/gpu.yaml
@@ -4,5 +4,5 @@ defaults:
 accelerator: gpu
 devices: 1
 
-strategy: deepspeed_stage_2
+strategy: deepspeed_stage_2 # deepspeed stage 2
 precision: 32
