--- a/configs/callbacks/model_checkpoint.yaml
+++ b/configs/callbacks/model_checkpoint.yaml
@@ -4,7 +4,7 @@ model_checkpoint:
   _target_: lightning.pytorch.callbacks.ModelCheckpoint
   dirpath: ${paths.root_dir}/ckpt # directory to save the model file
   filename: ${now:%Y-%m-%d}_${now:%H-%M-%S} # checkpoint filename
-  monitor: "val/loss for denoiser" # name of the logged metric which determines when model is improving
+  monitor: "val/loss" # name of the logged metric which determines when model is improving
   verbose: False # verbosity mode
   save_last: None # additionally always save an exact copy of the last checkpoint to a file last.ckpt
   save_top_k: 1 # save k best models (determined by above metric)
