--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,15 @@
 [project]
 name = "BERP"
-version = "0.1.2"
+version = "0.1.3"
 description = "BERP:A Blind Estimator of Room Acoustic and Physical Parameters"
 authors = [
     {name = "Lijun Wang & Yixian Lu", email = "lijun.wang@jaist.ac.jp"},
     {name = "Yixian Lu", email = "mclouc@gmail.com"},
 ]
 dependencies = [
-    "torch>=2.2.2",
-    "torchaudio>=2.2.2",
-    "torchvision>=0.17.2",
+    "torch>=2.3.0",
+    "torchaudio>=2.3.0",
+    "torchvision>=0.18.0",
     "lightning>=2.2.0,<3.0.0",
     "torchmetrics>=1.3.1,<1.4.0",
     "hydra-core==1.3.2",
@@ -18,10 +18,10 @@ dependencies = [
     "scipy>=1.12.0",
     "numpy>=1.26.4",
     "scikit-learn",
-    "nnAudio<=0.3.2",
+    "nnAudio==0.3.2",
     "librosa",
     "xformers>=0.0.25",
-    "einops==0.7.0",
+    "einops>=0.8.0",
     "rich",
     "tqdm",
     "pandas>=2.2.1",
@@ -56,7 +56,7 @@ toolbox = [
 logging = ["wandb", "clearml"]
 
 [tool.pdm.dev-dependencies]
-lint = ["ruff"]
+lint = ["ruff", "black"]
 test = ["pytest"]
 
 [[tool.pdm.sources]]
