--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ authors = [
     {name = "Yixian Lu", email = "mclouc@gmail.com"},
 ]
 dependencies = [
-    "torch>=2.3.0",
-    "torchaudio>=2.3.0",
-    "torchvision>=0.18.0",
+    "torch==2.2.2",
+    "torchaudio==2.2.2",
+    "torchvision>=0.17.1",
     "lightning>=2.2.0,<3.0.0",
     "torchmetrics>=1.3.1,<1.4.0",
     "hydra-core==1.3.2",
