DDP configs added FSDP

--- a/configs/trainer/ddp.yaml
+++ b/configs/trainer/ddp.yaml
@@ -3,15 +3,13 @@ defaults:
 
 # strategy: ddp # lightning native ddp with find_unused_parameters=False
 # strategy: ddp_find_unused_parameters_true # default: lightning native ddp with find_unused_parameters=True
-strategy: deepspeed_stage_2 # deepspeed stage 2
-precision: 32 # 32-bit precision
+strategy: fsdp # fsdp
 # strategy:
-  # _target_: lightning.fabric.strategies.DeepSpeedStrategy # lightning deepspeed strategy
-  # offload_optimizer: True
-  # allgather_bucket_size: 5e8
-  # reduce_bucket_size: 5e8
+  # _target_: lightning.fabric.strategies.FSDP
+  # sharding_strategy="FULL_SHARD" # FULL_SHARD, SHARD_GRAD_OP, HYBRID_SHARD, NO_SHARD
 
-# strategy: fsdp # fsdp
+# strategy: deepspeed
+# precision: 32
 
 accelerator: gpu
 devices: 2
