--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,12 @@ requires-python = ">=3.11,<3.12"
 readme = "README.md"
 license = {text = "GPL-V3"}
 
+[tool.pdm]
+distribution = true
+
+[tool.pdm.build]
+run-setuptools = true
+
 [[tool.pdm.sources]]
 url = "https://pypi.org/simple"
 verify_ssl = true
@@ -42,9 +48,6 @@ exclude_packages = ["*"]
 name = "torch"
 url = "https://download.pytorch.org/whl/cu121"
 verify_ssl = true
-
-[tool.pdm]
-distribution = true
 
 [build-system]
 requires = ["pdm-backend", "setuptools", "wheel", "Cython", "numpy"]
