--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,10 @@ authors = [
     {name = "Yixian Lu", email = "mclouc@gmail.com"},
 ]
 dependencies = [
-    "torch==2.3.1",
+    "torch==2.4.0",
     "torchaudio",
     "lightning>=2.2.0,<3.0.0",
-    "torchmetrics>=1.3.1,<1.4.0",
+    "torchmetrics>=1.4.0",
     "hydra-core>=1.3.2",
     "hydra-colorlog>=1.2.0",
     "hydra-optuna-sweeper>=1.2.0",
@@ -19,7 +19,7 @@ dependencies = [
     "scikit-learn",
     "nnAudio==0.3.2",
     "librosa",
-    "xformers>=0.0.25",
+    "xformers",
     "einops>=0.8.0",
     "rich",
     "tqdm",
@@ -43,10 +43,10 @@ verify_ssl = true
 name = "pypi"
 
 [[tool.pdm.source]]
-include_packages = ["torch", "torchaudio", "xformers"]
+include_packages = ["torch", "torchaudio"]
 exclude_packages = ["*"]
 name = "torch"
-url = "https://download.pytorch.org/whl/cu121"
+url = "https://download.pytorch.org/whl/cu124"
 verify_ssl = true
 
 [build-system]
