--- a/environment.yaml
+++ b/environment.yaml
@@ -21,9 +21,9 @@ channels:
 # compatibility is usually guaranteed
 
 dependencies:
-  - pytorch=2.2.0
-  - torchvision=0.17.0
-  - torchaudio=2.2.0
+  - pytorch=2.3.1
+  - torchvision=0.18.*
+  - torchaudio=2.3.*
   - lightning=2.*
   - torchmetrics=1.3.*
   - hydra-core=1.3.*
