--- a/configs/logger/wandb_roomEncoder.yaml
+++ b/configs/logger/wandb_roomEncoder.yaml
@@ -28,7 +28,7 @@ wandb:
   # project: evaluation-distSrcRoomEncoder
   # project: evaluation-oriSrcRoomEncoder
   # project: evaluation-jointRoomEncoder
-  entity: lucx
+  entity: ${your_wandb_entity}
   log_model: True # upload lightning ckpts
   prefix: "" # a string to put at the beginning of metric keys
   # entity: "" # set to name of your wandb team
