--- a/configs/eval.yaml
+++ b/configs/eval.yaml
@@ -26,11 +26,13 @@ tags: ["dev"]
 # ckpt_path: ${paths.root_dir}/logs/regression_ParametricPredictor_joint_est/runs/${time_stamp}/checkpoints/${epoch_num}.ckpt
 
 # melspectrogram model for joint estimation
-# ckpt_path: ${paths.root_dir}/logs/regression_ParametricPredictor_joint_est/runs/${time_stamp}/checkpoints/${epoch_num}.ckpt
-
-# MFCC model for joint estimation
 ckpt_path: ${paths.root_dir}/logs/regression_ParametricPredictor_joint_est/runs/${time_stamp}/checkpoints/${epoch_num}.ckpt
 
+# MFCC model for joint estimation
+# ckpt_path: ${paths.root_dir}/logs/regression_ParametricPredictor_joint_est/runs/${time_stamp}/checkpoints/${epoch_num}.ckpt
+
+# Spectrogram model for joint estimation
+# ckpt_path: ${paths.root_dir}/logs/regression_ParametricPredictor_joint_est/runs/${time_stamp}/checkpoints/${epoch_num}.ckpt
 
 # ! -------------------- RIR estimation --------------------
 # passing checkpoint path is necessary for prediction or evaluation
