--- a/configs/logger/wandb_volumeRegressor.yaml
+++ b/configs/logger/wandb_volumeRegressor.yaml
@@ -18,7 +18,7 @@ wandb:
   # project: volumeRegressor_evaluation_Gammatone
   # project: volumeRegressor_evaluation_Mel
   # project: volumeRegressor_evaluation_MFCC
-  entity: lucx
+  entity: ${your_wandb_entity}
   log_model: True # upload lightning ckpts
   prefix: "" # a string to put at the beginning of metric keys
   # entity: "" # set to name of your wandb team
