--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
     {name = "Yixian Lu", email = "mclouc@gmail.com"},
 ]
 dependencies = [
-    "torch==2.3.1",
+    "torch==2.4.1",
     "torchaudio",
     "lightning>=2.2.0,<3.0.0",
     "torchmetrics>=1.4.0",
@@ -19,7 +19,7 @@ dependencies = [
     "scikit-learn",
     "nnAudio==0.3.2",
     "librosa",
-    "xformers==0.0.27",
+    "xformers==0.0.28post1",
     "einops>=0.8.0",
     "rich",
     "tqdm",
