--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,17 @@
 [project]
 name = "BERP"
-version = "0.2.0"
+version = "0.2.1"
 description = "BERP:A Blind Estimator of Room Acoustic and Physical Parameters"
 authors = [
     {name = "Lijun Wang & Yixian Lu", email = "lijun.wang@jaist.ac.jp"},
     {name = "Yixian Lu", email = "mclouc@gmail.com"},
 ]
 dependencies = [
-    "packaging",
-    "torch==2.5.1",
-    "torchaudio",
     "lightning>=2.2.0,<3.0.0",
     "torchmetrics>=1.4.0",
     "hydra-core>=1.3.2",
     "hydra-colorlog>=1.2.0",
     "hydra-optuna-sweeper>=1.2.0",
-    "Cython",
     "scipy>=1.12.0",
     "numpy>=1.26.4",
     "scikit-learn",
@@ -34,10 +30,25 @@ requires = ["pdm-backend", "setuptools", "wheel", "Cython", "numpy"]
 build-backend = "pdm.backend"
 
 [project.optional-dependencies]
-integration = ["deepspeed", "rootutils", "autoroot", "sh"]
-no_isolation = [
-    "xformers==0.0.29.post1",
+# PyTorch/CUDA specific groups
+cpu = [
+    "torch==2.7.0+cpu",
+    "torchaudio",
 ]
+cu121 = [
+    "torch==2.5.1+cu121",
+    "torchaudio",
+    "xformers", 
+    "deepspeed",
+]
+cu126 = [
+    "torch==2.7.0+cu126",
+    "torchaudio",
+    "xformers",
+    "deepspeed",
+]
+
+integration = ["rootutils", "autoroot", "sh"]
 toolbox = [
     "pre-commit",
     "transformers",
@@ -47,7 +58,6 @@ toolbox = [
     "polars>=1.0.0",
     "xlstm>=1.0.4",
 ]
-
 logging = [
     "wandb",
 ]
@@ -64,33 +74,11 @@ warn_return_any = true
 
 [tool.ruff]
 exclude = [
-  "*/.venv/*",
-  "__pycache__",
-  ".git",
-  ".bzr",
-  ".direnv",
-  ".eggs",
-  ".git-rewrite",
-  ".hg",
-  ".ipynb_checkpoints",
-  ".mypy_cache",
-  ".nox",
-  ".pants.d",
-  ".pyenv",
-  ".pytest_cache",
-  ".pytype",
-  ".ruff_cache",
-  ".svn",
-  ".tox",
-  ".vscode",
-  "__pypackages__",
-  "_build",
-  "buck-out",
-  "build",
-  "dist",
-  "node_modules",
-  "site-packages",
-  "venv",
+  "*/.venv/*", "__pycache__", ".git", ".bzr", ".direnv", ".eggs",
+  ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox",
+  ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn",
+  ".tox", ".vscode", "__pypackages__", "_build", "buck-out", "build",
+  "dist", "node_modules", "site-packages", "venv",
 ]
 indent-width = 4
 line-length = 88
@@ -98,40 +86,18 @@ target-version = "py311"
 
 [tool.ruff.lint]
 ignore = [
-  "E501",  # line too long, handled by black
-  "B008",  # do not perform function calls in argument defaults
-  "W191",  # indentation contains tabs
-  "F401",  # imported but unused
-  "F403",
-  "C901",  # function is too complex
-  "UP007", # use `isinstance()` instead of comparing types directly
-  "C419",  # unnecessary list comprehensions passed to any and all
-  "C416",  # unnecessary dict, list, and set comprehension.
+  "E501", "B008", "W191", "F401", "F403", "C901", "UP007", "C419", "C416",
 ]
-select = [
-  "E",  # pycodestyle errors
-  "W",  # pycodestyle warnings
-  "F",  # pyflakes
-  "I",  # isort
-  "B",  # flake8-bugbear
-  "C",  # flake8-comprehensions
-  "UP", # pyupgrade
-]
+select = ["E", "W", "F", "I", "B", "C", "UP"]
 
 [tool.ruff.format]
-# Like Black, use double quotes for strings.
 quote-style = "double"
-# Like Black, indent with spaces, rather than tabs.
 indent-style = "space"
-# Like Black, respect magic trailing commas.
 skip-magic-trailing-comma = false
-# Like Black, automatically detect the appropriate line ending.
 line-ending = "auto"
 
 [tool.ruff.lint.mccabe]
-# C901
 max-complexity = 10
-
 
 [tool.pdm]
 distribution = true
@@ -139,37 +105,41 @@ distribution = true
 [tool.pdm.build]
 run-setuptools = true
 
-[[tool.pdm.sources]]
+# Define package sources. PDM will search these for packages.
+# The order might matter if multiple sources provide the same package/version without local identifiers.
+# However, by specifying exact versions with local identifiers (e.g., torch==2.5.1+cu121),
+# PDM should find them in the correct source.
+
+[[tool.pdm.source]]
 url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [[tool.pdm.source]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+verify_ssl = true
 include_packages = ["torch", "torchaudio"]
 exclude_packages = ["*"]
-name = "torch"
-url = "https://download.pytorch.org/whl/cu121" # for torchaudio compatibility
-verify_ssl = true
 
+[[tool.pdm.source]]
+name = "pytorch-cu121"
+url = "https://download.pytorch.org/whl/cu121"
+verify_ssl = true
+include_packages = ["torch", "torchaudio", "xformers"]
+exclude_packages = ["*"]
+
+[[tool.pdm.source]]
+name = "pytorch-cu126"
+url = "https://download.pytorch.org/whl/cu126"
+verify_ssl = true
+include_packages = ["torch", "torchaudio", "xformers"]
+exclude_packages = ["*"]
 
 [tool.pdm.dev-dependencies]
 lint = ["ruff"]
-test = [
-    "pytest",
-]
-doc = [
-    "pdoc",
-]
-type = [
-    "mypy",
-]
-notebook = [
-    "jupyter",
-    "jupyterlab",
-]
-plot = [
-    "matplotlib",
-    "seaborn",
-]
-
+test = ["pytest"]
+doc = ["pdoc"]
+type = ["mypy"]
+notebook = ["jupyter", "jupyterlab"]
+plot = ["matplotlib", "seaborn"]
